--- a/fire.css
+++ b/fire.css
@@ -186,3 +186,11 @@ td, th {
 tr:nth-child(odd) {
   background-color: #FFFFFF70;
 }
+
+footer {
+    font-size: 1rem;
+    padding: 2rem 0;
+    border-top: 1px dashed white;
+    color: white;
+    text-align: center;
+}
