--- a/fire.css
+++ b/fire.css
@@ -122,6 +122,10 @@ input {
     padding-left: 1rem;
     border: 0;
 }
+input:focus {
+    outline-width: 0;
+}
+
 #labelFront {
     font-size: 1.5rem;
     margin-right: .5rem;
@@ -160,14 +164,14 @@ input {
     visibility: visible;
 }
 
-button {
+#button {
     font-size: 1.5rem;
     background-color: white;
     border-radius: 2rem;
     padding: .5rem 1rem;
     border: 0;
 }
-button:hover {
+#button:hover {
     background-color: #EEE;
     cursor: pointer;
 }
