--- a/fire.css
+++ b/fire.css
@@ -1,5 +1,5 @@
 :root {
-    --tommagenta: #fa807e;
+    --tomgreen: #008fb3;
 }
 
 @font-face {
@@ -25,8 +25,8 @@
 
 html {
     height: 100vh;
-    background-color: #CCCCCC; /*For no gradient support*/
-    background-image: linear-gradient(110deg, #85B1FE, #A9D0FF, #B8BAFE);
+    background-color: white; /*For no gradient support*/
+/*    background-image: linear-gradient(110deg, #85B1FE, #A9D0FF, #B8BAFE);*/
     background-repeat: no-repeat;
     background-attachment: fixed;
     width:100%;
@@ -74,15 +74,15 @@ main {
 
 .h1 {
     font-size: 2rem;
-    color: var(--tommagenta);
+    color: var(--tomgreen);
 }
 .h2 {
     font-size: 1.3rem;
 }
 
 .blurBox {
-    background-color: white;
-    background-color: #FFFFFF90;
+    background-color: gray;
+    background-color: #DADADA;
     -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     min-width: 70%;
@@ -92,11 +92,11 @@ main {
 }
 
 a {
-    color: var(--tommagenta);
+    color: var(--tomgreen);
     text-decoration: none;
 }
 a:visited {
-    color: var(--tommagenta);
+    color: var(--tomgreen);
 }
 a:hover {
     text-decoration: underline;
@@ -122,9 +122,21 @@ input:focus {
     margin-right: .5rem;
 }
 
+#infoIcon {
+    background-color: #FFFFFFAA;
+    color: var(--tomgreen);
+    padding: 0 .35rem;
+    margin-right: .5rem;
+    border-radius: 50%;
+    font-size: 1rem;
+    font-weight: bold;
+    font-style: italic;
+    font-family:monospace;
+}
+
 .info {
     font-size: 1.5rem;
-    color: var(--tommagenta);
+    color: var(--tomgreen);
     position: relative;
     display: inline-block;
 }
@@ -166,7 +178,7 @@ input:focus {
     border: 0;
 }
 #button:hover {
-    background-color: #EEE;
+    box-shadow: 0 0 7px 2px #BFBFBFAA;
     cursor: pointer;
 }
 
@@ -182,13 +194,13 @@ td, th {
 }
 
 tr:nth-child(odd) {
-  background-color: #FFFFFF70;
+  background-color: #EBEBEB;
 }
 
 footer {
     font-size: 1rem;
     padding: 2rem 0;
-    border-top: 1px dashed white;
-    color: white;
+    border-top: 1px dashed var(--tomgreen);
+    color: var(--tomgreen);
     text-align: center;
 }
