--- a/fire.css
+++ b/fire.css
@@ -1,7 +1,3 @@
-:root {
-    --tomgreen: #008fb3;
-}
-
 @font-face {
     font-family: "Century_Gothic";
     src: url("fonts/GOTHIC.woff") format('woff');
@@ -26,7 +22,7 @@
 html {
     height: 100vh;
     background-color: white; /*For no gradient support*/
-/*    background-image: linear-gradient(110deg, #85B1FE, #A9D0FF, #B8BAFE);*/
+    background-image: linear-gradient(110deg, #FFFF99, #99FF99, #99FF99, #B3ECFF);
     background-repeat: no-repeat;
     background-attachment: fixed;
     width:100%;
@@ -35,6 +31,7 @@ html {
 
 html, body {
     font-family: "Century_Gothic", "Avenir";
+    color: white;
     font-size: 16px;
     padding: 0;
     margin: 0;
@@ -74,7 +71,7 @@ main {
 
 .h1 {
     font-size: 2rem;
-    color: var(--tomgreen);
+    color: white;
 }
 .h2 {
     font-size: 1.3rem;
@@ -82,7 +79,7 @@ main {
 
 .blurBox {
     background-color: gray;
-    background-color: #DADADA;
+    background-color: #00000040;
     -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     min-width: 70%;
@@ -91,18 +88,8 @@ main {
     border-radius: 40px;
 }
 
-a {
-    color: var(--tomgreen);
-    text-decoration: none;
-}
-a:visited {
-    color: var(--tomgreen);
-}
-a:hover {
-    text-decoration: underline;
-}
 hr {
-    border-top: 1px gray;
+    border-top: 1px white;
     border-style: solid none none none;
     margin-top: 1rem;
 }
@@ -124,8 +111,8 @@ input:focus {
 }
 
 #infoIcon {
-    background-color: #FFFFFFAA;
-    color: var(--tomgreen);
+    background-color: white;
+    color: #808000;
     padding: 0 .35rem;
     margin-right: .5rem;
     border-radius: 50%;
@@ -137,7 +124,6 @@ input:focus {
 
 .info {
     font-size: 1.5rem;
-    color: var(--tomgreen);
     position: relative;
     display: inline-block;
 }
@@ -179,7 +165,7 @@ input:focus {
     border: 0;
 }
 #button:hover {
-    box-shadow: 0 0 7px 2px #BFBFBFAA;
+    box-shadow: 0 0 7px 2px #FFFFFFAA;
     cursor: pointer;
 }
 
@@ -195,13 +181,13 @@ td, th {
 }
 
 tr:nth-child(odd) {
-  background-color: #EBEBEB;
+  background-color: #00000035;
 }
 
 footer {
     font-size: 1rem;
     padding: 2rem 0;
-    border-top: 1px dashed var(--tomgreen);
-    color: var(--tomgreen);
+    border-top: 1px dashed black;
+    color: black;
     text-align: center;
 }
