--- a/fire.css
+++ b/fire.css
@@ -1,30 +1,32 @@
 @font-face {
     font-family: "TommySans";
-    src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySans.woff") format('woff');
+    src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySans.woff") format('woff'),
+         url("fonts/TommySans.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
 }
 @font-face {
     font-family: "TommySans";
-    src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySansBold.woff") format('woff');
+    src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySansBold.woff") format('woff'),
+         url("fonts/TommySansBold.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
     font-weight: bold;
 }
 @font-face {
     font-family: "Century_Gothic";
-    src: url("fonts/GOTHIC.woff") format('woff');
+    src: url("/fonts/CenturyGothic.woff") format('woff');
 }
 @font-face {
     font-family: "Century_Gothic";
-    src: url("fonts/GOTHICB.woff") format('woff');
+    src: url("/fonts/CenturyGothicBold.woff") format('woff');
     font-weight: bold;
 }
 @font-face {
     font-family: "Century_Gothic";
-    src: url("fonts/GOTHICBI.woff") format('woff');
+    src: url("/fonts/CenturyGothicBoldItalic.woff") format('woff');
     font-weight: bold;
     font-style: italic;
 }
 @font-face {
     font-family: "Century_Gothic";
-    src: url("fonts/GOTHICI.woff") format('woff');
+    src: url("/fonts/CenturyGothicItalic.woff") format('woff');
     font-style: italic;
 }
 
