--- a/fire.css
+++ b/fire.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "TommySans";
     src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySans.woff") format('woff'),
-         url("fonts/TommySans.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
+         url("/fonts/TommySans.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
 }
 @font-face {
     font-family: "TommySans";
     src: url("https://github.com/votommy/TommySans/blob/main/WOFFs/TommySansBold.woff") format('woff'),
-         url("fonts/TommySansBold.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
+         url("/fonts/TommySansBold.woff") format('woff'); /*If web-hosted font doesn't work, use the on-board one*/
     font-weight: bold;
 }
 @font-face {
